--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="web development/HTML-personal site/image/g umashankar patro.png" alt="G Umashankar patro profile picture" width="400" height="500"></td>
+      <td> <img src="g umashankar patro.png" alt="G Umashankar patro profile picture" width="400" height="500"></td>
       <td>
         <h1>G Umashankar patro</h1>
         <p><em>i am a superb person, i didn't say anything to anyone people is pulling my leg every tym without any reason. <strong>i am a tiger</strong>.</em></p>
