--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <li><a href="https://www.hackerearth.com/practice/">codings</a></li>
       <li>seeing <a href="https://www.youtube.com/">YOU tube videos</a></li>
     </ul>
-    <a href="file:///C:/Users/AVINASH%20PATRO/OneDrive/Documents/web%20development/HTML-%20personl%20site/index.html" target="_blank">All about my personal life</a>
+    <a href="ALL about my prsonal life.html" target="_blank">All about my personal life</a>
     <br>
     <a href="file:///C:/Users/AVINASH%20PATRO/OneDrive/Documents/web%20development/HTML-%20personl%20site/contact%20me.html" target="_blank">CONTACT ME</a>
     <h3>my work experience</h3>
