--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </ul>
     <a href="ALL about my prsonal life.html" target="_blank">All about my personal life</a>
     <br>
-    <a href="file:///C:/Users/AVINASH%20PATRO/OneDrive/Documents/web%20development/HTML-%20personl%20site/contact%20me.html" target="_blank">CONTACT ME</a>
+    <a href="contact me.html" target="_blank">CONTACT ME</a>
     <h3>my work experience</h3>
     <p>2015-2021 i am working as a senior developer in the TCS company.</p>
     <p>2021-2022 i am working as a senior bussiness analyst.</p>
