--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <li><a href="https://www.hackerearth.com/practice/">codings</a></li>
       <li>seeing <a href="https://www.youtube.com/">YOU tube videos</a></li>
     </ul>
-    <a href="ALL about my prsonal life.html" target="_blank">All about my personal life</a>
+    <a href="ALL about my prsonal life.html">All about my personal life</a>
     <br>
-    <a href="contact me.html" target="_blank">CONTACT ME</a>
+    <a href="contact me.html">CONTACT ME</a>
     <h3>my work experience</h3>
     <p>2015-2021 i am working as a senior developer in the TCS company.</p>
     <p>2021-2022 i am working as a senior bussiness analyst.</p>
