Update ALL about my prsonal life.html

--- a/ALL about my prsonal life.html
+++ b/ALL about my prsonal life.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <img src="image/g umashankar patro.png" alt="G Umashankar patro profile picture" width="400" height="500">
+    <img src="g umashankar patro.png" alt="G Umashankar patro profile picture" width="400" height="500">
     <h1>G Umashankar patro</h1>
     <p><em>i am a superb person, i didn't say anything to anyone people is pulling my leg every tym without any reason. <strong>i am a tiger</strong>.</em></p>
     <hr>
